css/style.css
* {
    box-sizing: border-box;
}

.cards {
    width: 1320px;
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    margin: 0 auto;
}

.cards-item {
    position: relative;
    width: 420px;
    height: 571px;
    margin-bottom: 50px;
}

.cards-item__img {
    width: 100%;
    height: 348px;
    border-radius: 4px;
}

.cards-item__icon {
    position: absolute;
    top: 0;
    left: 0;
    width: 54px;
    height: 54px;
    margin-top: 15px;
    margin-left: 15px;
}

.cards-item__view {
    background-color:#FFFFFFCC;
    backdrop-filter: blur(10px);
    position: absolute;
    display: flex;
    justify-content: space-between;
    align-items: center;
    width: 175px;
    height: 54px;
    top: 0px;
    right: 0px;
    margin-top: 15px;
    margin-right: 15px;
    padding: 13px 25px;
}

.view_icon-2 {
    position: relative;
}

.view_icon-2__text {
    /*получилось не очень. по пока ничего другого не придумалось*/
    position: absolute;
    font-size: 7px;
    color: black;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    text-transform: uppercase;
    font-weight: bold;
}

.cards-item__description {
    position: absolute;
    bottom: 224px;
    left: 0;
    right: 0;
    display: flex;
    overflow-y: auto;
    justify-content: space-around;
    height: 96px;
    font-family: "Roboto", sans-serif;
    font-weight: 400;
    font-size: 14px;
    color: #FFFFFF;
    background-color: #00000080;
    backdrop-filter: blur(20px);
    line-height: 160%;
    letter-spacing: 0px;
    border-radius: 4px;
}

.cards-item__description_text {
    width: 390px;
    height: 66px;
    text-align: left;
}

.cards-item__header {
    display: flex;
    justify-content: space-between;
    margin-top: 15px;
}

.cards-item__header_text {
    /*кроме google fonts пока не знаю других источников шрифтов. шрифта Euclid Flex там нет*/
    text-decoration: none;
    font-size: 22px;
    font-weight: 700;
    color: black;
}

.cards-item__header_text:hover {
    color: #FF4338;
    transition: 0.2s;
}

.cards-item__header_like-button {
    background-color: transparent;
    border: none;
}

.like-button {
    width: 24px;
    height: 22px;
}

.like-button:hover{
    cursor: pointer;
}

.like-button:active{
/*тут подозреваю, нужен js, чтобы при нажатии кнопка становилась красной (или бы вызывался другой svg из спрайта). пока не умею*/
}


.address {
    display: flex;
    width: 369.33px;
    height: 20px;
    justify-content: space-between;
    color: #898C90;
    font-weight: 500;
    font-style: Medium;
    font-size: 16px;
    line-height: 100%;
    letter-spacing: 0%;
    text-align: center;
    margin-top: 15px;

}

.address__map {
    display: flex;
}

.address__text {
    margin-left: 10px;
}

.address__map-icon {
    width: 15px;
    height: 18px;
}

.address__distination {
    display: flex;
}

.address__distination-icon {
    width: 16px;
    height: 22px;
}

.address__distination-text {
    margin-left: 10px;
}

.metro-station {
    display: flex;
    margin-top: 14px;
    align-items: center;
}

.metro-station__text {
    display: flex;
    color: #898C90;
    margin-left: 10px;
}

.metro-station__icon {
    width: 22px;
    height: 10px;
    padding-left: 0;
}

.cards-item__transition-btn {
    width: 420px;
    height: 60px;
    border-radius: 4px;
    background-color: #898C90;
    border-style: none;
    margin-top: 15px;
    color: #FFFFFF;
    font-family: Roboto;
    font-weight: 700;
    font-size: 14px;
    line-height: 18px;
    letter-spacing: 1px;
    text-transform: uppercase;
    cursor: pointer;
}

.cards-item__transition-btn:hover {
    background-color: #F2352A;
    transition: 0.2s;

}

.cards-item__rating {
    display: flex;
    justify-content: flex-start;
    margin-top: 17px;
}

.rating_icon {
    width: 15px;
    height: 14px;
    margin-right: 4px;
}

.rating_figure {
    font-family: "Roboto", sans-serif;
    font-weight: 400;
    font-size: 14px;
    margin-left: 10px;
}

@media screen and (max-width: 768px) {
    .cards {
        flex-direction: column;
        width: 688px;
    }
    .cards-item {
        display: flex;
        width: 688px;
        height: 277px;
        margin-bottom: 30px;
    }

    .cards-item-top {
        padding-right: 20px;
    }

    .address {
       flex-direction: column;
    }

    .cards-item__picture {
    width: 344px;
    height: 277px;
    }

    .cards-item__view {
        width: 126px;
        height: 34px;
        left: 200px;
        margin-top: 15px;
        margin-right: 15px;
        padding: 13px 25px;
    }

    .cards-item__icon {
    width: 36px;
    height: 36px;
    }

    .cards-item__description {
        width: 344px;
        bottom: 0;
        font-size: 12px;
    }

    .cards-item__description_text {
        padding-left: 7px;
    }

    .cards-item__transition-btn {
        width: 350px;
        height: 50px;
    }

    .address__map {
        margin-bottom: 5px;
    }

    .metro-station {
        margin-top: 25px;
    }

}

